[gd_scene load_steps=4 format=3 uid="uid://djxptrs2fchfr"]

[ext_resource type="FontFile" uid="uid://dv0kujksq88d5" path="res://fonts/PixelOperator8.ttf" id="1_52pns"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="1_apgcp"]
[ext_resource type="SpriteFrames" uid="uid://bcnclk1m5p2l7" path="res://sprites/sprite_frames/earth.tres" id="3_mkyh5"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_apgcp")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00110587, 0.014849, 0.0464791, 1)

[node name="Name" type="Label" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.0
offset_top = 10.0
offset_right = 51.0
offset_bottom = 34.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_52pns")
theme_override_font_sizes/font_size = 24
text = "Earth"
horizontal_alignment = 1

[node name="PlanetInfoContainer" type="VBoxContainer" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -109.0
offset_right = 175.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="PopulationCount" type="Label" parent="Control/ColorRect/PlanetInfoContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_52pns")
theme_override_font_sizes/font_size = 24
text = "Population: 875B"

[node name="WaterSource?" type="Label" parent="Control/ColorRect/PlanetInfoContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_52pns")
theme_override_font_sizes/font_size = 24
text = "Water Source: YES"

[node name="Breathable?" type="Label" parent="Control/ColorRect/PlanetInfoContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_52pns")
theme_override_font_sizes/font_size = 24
text = "Breatheable: YES"

[node name="PlanetImageContainer" type="Control" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 200.0
offset_right = 200.0
grow_vertical = 2

[node name="PlanetImage" type="AnimatedSprite2D" parent="Control/ColorRect/PlanetImageContainer"]
scale = Vector2(3, 3)
sprite_frames = ExtResource("3_mkyh5")
animation = &"rotate"
autoplay = "rotate"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ColorRect"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackButton" type="Button" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 1014.0
offset_top = 8.0
offset_right = 1142.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("1_52pns")
theme_override_font_sizes/font_size = 24
text = "Back"

[node name="CivList" type="ItemList" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 431.0
offset_top = 485.0
offset_right = 800.0
offset_bottom = 612.0
allow_search = false

[node name="CivInfoBox" type="Control" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -292.0
offset_top = -85.0
offset_right = -37.0
offset_bottom = 119.0
grow_horizontal = 0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control/ColorRect/CivInfoBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.0941176, 0.129412, 1)

[node name="CivInfo" type="VBoxContainer" parent="Control/ColorRect/CivInfoBox"]
layout_mode = 0
offset_right = 255.0
offset_bottom = 206.0
theme_override_constants/separation = 10

[node name="CivName" type="Label" parent="Control/ColorRect/CivInfoBox/CivInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_52pns")
theme_override_font_sizes/font_size = 16
text = "America"
horizontal_alignment = 1

[node name="CivPop" type="Label" parent="Control/ColorRect/CivInfoBox/CivInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_52pns")
theme_override_font_sizes/font_size = 16
text = "Population: -100M"
horizontal_alignment = 1

[node name="CivFood" type="Label" parent="Control/ColorRect/CivInfoBox/CivInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_52pns")
theme_override_font_sizes/font_size = 16
text = "Food: -100M kg"
horizontal_alignment = 1

[node name="CivWater" type="Label" parent="Control/ColorRect/CivInfoBox/CivInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_52pns")
theme_override_font_sizes/font_size = 16
text = "Water: -100M kg"
horizontal_alignment = 1

[node name="CivOxy" type="Label" parent="Control/ColorRect/CivInfoBox/CivInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_52pns")
theme_override_font_sizes/font_size = 16
text = "Oxygen: -100M kg"
horizontal_alignment = 1

[node name="CivFuel" type="Label" parent="Control/ColorRect/CivInfoBox/CivInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_52pns")
theme_override_font_sizes/font_size = 16
text = "Fuel: -100M kg"
horizontal_alignment = 1

[node name="CivResources" type="Label" parent="Control/ColorRect/CivInfoBox/CivInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_52pns")
theme_override_font_sizes/font_size = 16
text = "Resources: -100M kg"
horizontal_alignment = 1

[node name="AdvancedButton" type="Button" parent="Control/ColorRect/CivInfoBox/CivInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_52pns")
text = "Advanced"

[node name="ColonizeButton" type="Button" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 112.0
offset_top = 501.0
offset_right = 276.0
offset_bottom = 549.0
theme_override_fonts/font = ExtResource("1_52pns")
theme_override_font_sizes/font_size = 24
text = "Colonize"

[node name="SendShipToMoon" type="Button" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 32.0
offset_top = 563.0
offset_right = 382.0
offset_bottom = 595.0
theme_override_fonts/font = ExtResource("1_52pns")
theme_override_font_sizes/font_size = 24
text = "Send ship to moon!"

[connection signal="pressed" from="Control/ColorRect/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="item_activated" from="Control/ColorRect/CivList" to="." method="_on_civ_list_item_activated"]
[connection signal="pressed" from="Control/ColorRect/ColonizeButton" to="." method="_on_add_civ_button_pressed"]
